# space

./: AGENTS.md  README.md
crates/realm-client/src/: main.rs  plain.rs  tui.rs  ui.rs
crates/realm-core/src/: commands.rs
crates/realm-game/: Cargo.toml
crates/realm-game/src/: code_watch.rs  colony_dir.rs  console.rs  main.rs  source_ui.rs  wasm_runner.rs
crates/realm-sdk/src/: lib.rs
crates/realm-server/src/: server.rs
templates/colony/: Cargo.toml
templates/colony/src/: lib.rs
